# llm-infer

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  LLAMA.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.zed/: tasks.json
include/: gguf.hpp  hf_config.hpp  kernels.cuh  kernels_cpu.hpp  llama.hpp  model.hpp  safetensors.hpp  tokenizer.hpp
include/model/: block.hpp  config.hpp  device.hpp  inference_state.hpp  model.hpp  tensor.hpp
safetensors/: CMakeLists.txt
safetensors/include/: safetensors.hpp
safetensors/src/: safetensors.cpp
src/: attention.cu  gguf.cpp  kernels.cu  main.cpp  tokenizer.cpp
src/model/: block.cpp  block.cu  config.cpp  device.cpp  inference_state.cpp  model.cpp  model.cu
tensor/: CMakeLists.txt
tensor/include/: tensor.hpp  tensor_array.hpp  tensor_array_mut_view.hpp  tensor_array_view.hpp  tensor_base.hpp  tensor_fixed.hpp  tensor_fixed_mut_view.hpp  tensor_fixed_view.hpp  tensor_safetensors_adapter.hpp  tensor_static.hpp  tensor_static_mut_view.hpp  tensor_static_view.hpp  tensor_traits.hpp  tensor_types.hpp
tensor/include/shape/: shape_concepts.hpp  shape_policies.hpp
tensor/include/storage/: storage_concepts.hpp  storage_types.hpp
tools/: gguf_info.cpp  hf_info.cpp  infer.cpp
